refactor heightData